--- a/projects/ngx-coding-components/src/lib/var-coding/var-codes-number/var-codes-number.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-codes-number/var-codes-number.component.html
@@ -2,38 +2,46 @@
   <div class="fx-row-start-end">
     <codes-title [codeList]="codes" (codesChanged)="codesChanged.emit(codes)"></codes-title>
   </div>
-  <div *ngIf="codes" class="fx-column-start-stretch">
-    <div *ngFor="let code of codes; index as codeIndex" class="fx-row-start-stretch">
-      <div class="fx-column-start-stretch fx-flex-fill">
-        <code-header (codeDataChanged)="codesChanged.emit(codes)" [enableSwitchNull]="true"
-                     [code]="code" [allCodes]="codes"></code-header>
-        <div class="fx-row-start-start fx-gap-10">
-          <div class="has-rules-warning">
-            <p *ngIf="code.manualInstruction" [matTooltip]="'code.has-rule-warning.autocode' | translate">!!</p>
+  @if (codes) {
+    <div class="fx-column-start-stretch">
+      @for (code of codes; track code; let codeIndex = $index) {
+        <div class="fx-row-start-stretch">
+          <div class="fx-column-start-stretch fx-flex-fill">
+            <code-header (codeDataChanged)="codesChanged.emit(codes)" [enableSwitchNull]="true"
+            [code]="code" [allCodes]="codes"></code-header>
+            <div class="fx-row-start-start fx-gap-10">
+              <div class="has-rules-warning">
+                @if (code.manualInstruction) {
+                  <p [matTooltip]="'code.has-rule-warning.autocode' | translate">!!</p>
+                }
+              </div>
+              <code-rules [style.padding-left.px]="4" [style.flex]="'1 1 auto'"
+                [code]="code" [varInfo]="varInfo" preferredDataType="number" [fragmentMode]="!!fragmenting"
+              (codeRulesChanged)="codesChanged.emit(codes)"></code-rules>
+            </div>
           </div>
-          <code-rules [style.padding-left.px]="4" [style.flex]="'1 1 auto'"
-                           [code]="code" [varInfo]="varInfo" preferredDataType="number" [fragmentMode]="!!fragmenting"
-                           (codeRulesChanged)="codesChanged.emit(codes)"></code-rules>
+          <button mat-icon-button (click)="deleteCode(codeIndex); updateCodeExistences()" [matTooltip]="'code.prompt.delete' | translate">
+            <mat-icon>delete</mat-icon>
+          </button>
         </div>
+      }
+      <div class="fx-row-start-center" [style.margin-top.px]="12">
+        <button mat-raised-button (click)="addCodeCredit()">
+          <mat-icon>add</mat-icon>{{'code.prompt.add-score1' | translate}}
+        </button>
+        <button mat-raised-button (click)="addCodeNoCredit()">
+          <mat-icon>add</mat-icon>{{'code.prompt.add-score0' | translate}}
+        </button>
+        <button mat-raised-button (click)="addCodeSingleton('ELSE'); updateCodeExistences()" [disabled]="!!elseCodeExists">
+          <mat-icon>add</mat-icon>{{'code.prompt.add-else' | translate}}
+        </button>
+        @if (varInfo?.nullable) {
+          <button mat-raised-button
+            (click)="addCodeSingleton('IS_NULL'); updateCodeExistences()" [disabled]="!!isNullCodeExists">
+            <mat-icon>add</mat-icon>{{'code.prompt.add-is-null' | translate}}
+          </button>
+        }
       </div>
-      <button mat-icon-button (click)="deleteCode(codeIndex); updateCodeExistences()" [matTooltip]="'code.prompt.delete' | translate">
-        <mat-icon>delete</mat-icon>
-      </button>
     </div>
-    <div class="fx-row-start-center" [style.margin-top.px]="12">
-      <button mat-raised-button (click)="addCodeCredit()">
-        <mat-icon>add</mat-icon>{{'code.prompt.add-score1' | translate}}
-      </button>
-      <button mat-raised-button (click)="addCodeNoCredit()">
-        <mat-icon>add</mat-icon>{{'code.prompt.add-score0' | translate}}
-      </button>
-      <button mat-raised-button (click)="addCodeSingleton('ELSE'); updateCodeExistences()" [disabled]="!!elseCodeExists">
-        <mat-icon>add</mat-icon>{{'code.prompt.add-else' | translate}}
-      </button>
-      <button mat-raised-button *ngIf="varInfo?.nullable"
-              (click)="addCodeSingleton('IS_NULL'); updateCodeExistences()" [disabled]="!!isNullCodeExists">
-        <mat-icon>add</mat-icon>{{'code.prompt.add-is-null' | translate}}
-      </button>
-    </div>
-  </div>
+  }
 </div>
