--- a/projects/ngx-coding-components/src/lib/var-coding/var-codes-manual/var-codes-manual.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-codes-manual/var-codes-manual.component.html
@@ -2,38 +2,42 @@
   <div class="fx-row-space-between-end">
     <codes-title [codeList]="codes" (codesChanged)="codesChanged.emit(codes)"></codes-title>
     <div class="processing">
-        <mat-checkbox [checked]="processing ? (processing.indexOf('REPLAY_REQUIRED') >= 0) : false"
-                      (change)="alterProcessing('REPLAY_REQUIRED', $event.checked)">
-          <div [style.white-space]="'normal'" [style.line-height]="1.2">
-            {{'processing.REPLAY_REQUIRED' | translate}}
-          </div>
-        </mat-checkbox>
-        <mat-checkbox [checked]="processing ? (processing.indexOf('ATTACHMENT') >= 0) : false"
-                      (change)="alterProcessing('ATTACHMENT', $event.checked)">
-          <div [style.white-space]="'normal'" [style.line-height]="1.2">
-            {{'processing.ATTACHMENT' | translate}}
-          </div>
-        </mat-checkbox>
+      <mat-checkbox [checked]="processing ? (processing.indexOf('REPLAY_REQUIRED') >= 0) : false"
+        (change)="alterProcessing('REPLAY_REQUIRED', $event.checked)">
+        <div [style.white-space]="'normal'" [style.line-height]="1.2">
+          {{'processing.REPLAY_REQUIRED' | translate}}
+        </div>
+      </mat-checkbox>
+      <mat-checkbox [checked]="processing ? (processing.indexOf('ATTACHMENT') >= 0) : false"
+        (change)="alterProcessing('ATTACHMENT', $event.checked)">
+        <div [style.white-space]="'normal'" [style.line-height]="1.2">
+          {{'processing.ATTACHMENT' | translate}}
+        </div>
+      </mat-checkbox>
     </div>
   </div>
-  <ng-container *ngIf="codes">
-    <div *ngFor="let code of codes; index as codeIndex" class="fx-row-start-stretch"
-         [style.margin-bottom.px]="4">
-      <div class="fx-column-start-stretch fx-flex-fill">
-        <code-header (codeDataChanged)="codesChanged.emit(codes)" [enableSwitchNull]="false"
-                     [code]="code" [allCodes]="codes"></code-header>
-        <div class="fx-row-start-stretch fx-gap-10">
-          <div class="has-rules-warning">
-            <p *ngIf="code | hasRule" [matTooltip]="'code.has-rule-warning.autocode' | translate">!!</p>
+  @if (codes) {
+    @for (code of codes; track code; let codeIndex = $index) {
+      <div class="fx-row-start-stretch"
+        [style.margin-bottom.px]="4">
+        <div class="fx-column-start-stretch fx-flex-fill">
+          <code-header (codeDataChanged)="codesChanged.emit(codes)" [enableSwitchNull]="false"
+          [code]="code" [allCodes]="codes"></code-header>
+          <div class="fx-row-start-stretch fx-gap-10">
+            <div class="has-rules-warning">
+              @if (code | hasRule) {
+                <p [matTooltip]="'code.has-rule-warning.autocode' | translate">!!</p>
+              }
+            </div>
+            <code-instruction [code]="code" [style.flex]="'1 1 auto'" [style.max-height.px]="200"
+            (codeDataChanged)="codesChanged.emit(codes)"></code-instruction>
           </div>
-          <code-instruction [code]="code" [style.flex]="'1 1 auto'" [style.max-height.px]="200"
-                            (codeDataChanged)="codesChanged.emit(codes)"></code-instruction>
         </div>
+        <button mat-icon-button (click)="deleteCode(codeIndex)" [matTooltip]="'code.prompt.delete' | translate">
+          <mat-icon>delete</mat-icon>
+        </button>
       </div>
-      <button mat-icon-button (click)="deleteCode(codeIndex)" [matTooltip]="'code.prompt.delete' | translate">
-        <mat-icon>delete</mat-icon>
-      </button>
-    </div>
+    }
     <div class="fx-row-start-center" [style.margin-top.px]="12">
       <button mat-raised-button (click)="addCodeCredit()">
         <mat-icon>add</mat-icon>{{'code.prompt.add-score1' | translate}}
@@ -48,5 +52,5 @@
         <mat-icon>add</mat-icon>{{'code.prompt.add-else' | translate}}
       </button>
     </div>
-  </ng-container>
+  }
 </div>
